feat: finish section 6,changeed imges, correct max-whidt and fixed button

--- a/index.html
+++ b/index.html
@@ -79,6 +79,8 @@
                     </li>
                 </ul>
                 <!--i 4 container  -->
+
+                <!-- primo -->
                 <div class="schede">
                     <div class="piano">
                         <div>
@@ -112,7 +114,7 @@
                                         </div>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="btn btn-schede">Prova gratis per 30 giorni</span>
                                 <span class="underline-span">oppure</span>
                                 <a href="#">acquista ora</a>
                                 <h3>Punti salienti dei piani</h3>
@@ -133,39 +135,39 @@
                             </div>
                         </div>
                     </div>
+                    <!-- secondo -->
                     <div class="piano">
                         <div>
                             <div class="soggetto">
-                                <i class="fa-solid fa-user"></i> Singolo
+                                <i class="fa-solid fa-users"></i> Team
                             </div>
                             <div class="info-box">
                                 <ul>
-                                    <li class="tipologia">Professional</li>
-                                    <li class="prezzo">€12.00</li>
-                                    <li class="durata">/mese</li>
+                                    <li class="tipologia">Advanced</li>
+                                    <li class="prezzo">€18.00</li>
+                                    <li class="durata">/utente/mese</li>
                                 </ul>
                                 <ul class="specifiche1">
                                     <li>
                                         <div>
-                                            <i class="fa-solid fa-user"></i>
-                                            1 utente
+                                            <i class="fa-solid fa-users"></i>
+                                            3 o più utenti
                                         </div>
                                     </li>
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-folder"></i>
-                                            5 TB di spazio di archiviazione sicuro
+                                            Tutto lo spazio di cui ha bisogno il tuo team
                                         </div>
                                     </li>
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-share-nodes"></i>
-                                            Funzioni di produttività premium e condivisione
-                                            file semplice e sicuro
+                                            Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
                                         </div>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="btn btn-schede">Prova gratis per 30 giorni</span>
                                 <span class="underline-span">oppure</span>
                                 <a href="#">acquista ora</a>
                                 <h3>Punti salienti dei piani</h3>
@@ -173,7 +175,7 @@
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-check"></i>
-                                            Invia file fino a 100GB con Dropbox Transfert
+                                            Nessun limite di spazio per i file
                                         </div>
                                     </li>
                                     <li>
@@ -182,43 +184,61 @@
                                             Cartelle offline su dispositivi mobili
                                         </div>
                                     </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Risparmio del 50% rispetto alle iscrizioni singole
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Possibilità di inserire nuovi membri del team
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Gestione dei permessi in base ai ruoli
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
+                    <!-- terzo -->
                     <div class="piano">
                         <div>
                             <div class="soggetto">
-                                <i class="fa-solid fa-user"></i> Singolo
+                                <i class="fa-solid fa-building"></i> Azienda
                             </div>
                             <div class="info-box">
                                 <ul>
-                                    <li class="tipologia">Professional</li>
-                                    <li class="prezzo">€12.00</li>
-                                    <li class="durata">/mese</li>
+                                    <li class="tipologia">Enterprise</li>
+                                    <li class="prezzo">contattaci</li>
+                                    <li class="durata">-</li>
                                 </ul>
                                 <ul class="specifiche1">
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-user"></i>
-                                            1 utente
+                                            10 o più utenti
                                         </div>
                                     </li>
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-folder"></i>
-                                            5 TB di spazio di archiviazione sicuro
+                                            Soluzioni personalizzabili per la tua azienda
                                         </div>
                                     </li>
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-share-nodes"></i>
-                                            Funzioni di produttività premium e condivisione
-                                            file semplice e sicuro
+                                            Soluzioni personalizzate per aiutare gli amministratori in una gestione su larga scala
                                         </div>
                                     </li>
                                 </ul>
-                                <span class="btn">Prova gratis per 30 giorni</span>
+                                <span class="btn btn-schede">Contattaci</span>
                                 <span class="underline-span">oppure</span>
                                 <a href="#">acquista ora</a>
                                 <h3>Punti salienti dei piani</h3>
@@ -226,19 +246,26 @@
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-check"></i>
-                                            Invia file fino a 100GB con Dropbox Transfert
+                                            Cartelle offline su dispositivi mobili
                                         </div>
                                     </li>
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-check"></i>
-                                            Cartelle offline su dispositivi mobili
+                                            Servizio assistenza 24/h
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div>
+                                            <i class="fa-solid fa-check"></i>
+                                            Possibilità di personalizzazione totale
                                         </div>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </div>
+                    <!-- quarto -->
                     <div class="piano piano-big">
                         <div>
                             <div class="soggetto">
@@ -301,7 +328,7 @@
                     </div>
                     <div class="operazione">
                         <div>
-                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                            <img src="img/business-feature-send-files-it.png" alt="switch">
                         </div>
                         <div>
                            <h5>
@@ -314,7 +341,7 @@
                     </div>
                     <div class="operazione">
                         <div>
-                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                            <img src="img/business-feature-coordinate-it.png" alt="switch">
                         </div>
                         <div>
                            <h5>
@@ -327,7 +354,7 @@
                     </div>
                     <div class="operazione">
                         <div>
-                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                            <img src="img/business-feature-integrations-it.png" alt="switch">
                         </div>
                         <div>
                            <h5>
@@ -340,7 +367,7 @@
                     </div>
                     <div class="operazione">
                         <div>
-                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                            <img src="img/business-feature-multi-device.png" alt="switch">
                         </div>
                         <div>
                            <h5>
@@ -353,7 +380,7 @@
                     </div>
                     <div class="operazione">
                         <div>
-                            <img src="img/business-feature-switching-tools.png" alt="switch">
+                            <img src="img/business-feature-security.png" alt="switch">
                         </div>
                         <div>
                            <h5>
@@ -370,7 +397,13 @@
 
         <!-- sesta sezione -->
         <section class="section-6">
-            <div class="container-6"></div>
+            <div class="container-6">
+                <div>
+                    Più di 500.000 team utilizzano <br>
+                    Dropbox Business
+                </div>
+                <a href="#">Scopri di più sui nostri clienti</a>
+            </div>
         </section>
     </main>
     <!-- inizio footer -->
