feat: finish footer

--- a/index.html
+++ b/index.html
@@ -163,7 +163,8 @@
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-share-nodes"></i>
-                                            Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                            Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del
+                                            tuo team
                                         </div>
                                     </li>
                                 </ul>
@@ -234,7 +235,8 @@
                                     <li>
                                         <div>
                                             <i class="fa-solid fa-share-nodes"></i>
-                                            Soluzioni personalizzate per aiutare gli amministratori in una gestione su larga scala
+                                            Soluzioni personalizzate per aiutare gli amministratori in una gestione su
+                                            larga scala
                                         </div>
                                     </li>
                                 </ul>
@@ -299,7 +301,9 @@
                         Entra in contatto con un partner Dropbox
                     </h4>
                     <p>
-                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e supporto continui.
+                        Trova un partner Dropbox e HelloSign di fiducia. Ottieni le soluzioni e i servizi necessari per
+                        raggiungere i tuoi obiettivi aziendali, tra cui implementazione, integrazione, gestione e
+                        supporto continui.
                     </p>
                     <span class="btn-partner">Trova un partner</span>
                 </div>
@@ -318,12 +322,14 @@
                             <img src="img/business-feature-switching-tools.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                     <div class="operazione">
@@ -331,12 +337,14 @@
                             <img src="img/business-feature-send-files-it.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                     <div class="operazione">
@@ -344,12 +352,14 @@
                             <img src="img/business-feature-coordinate-it.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                     <div class="operazione">
@@ -357,12 +367,14 @@
                             <img src="img/business-feature-integrations-it.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                     <div class="operazione">
@@ -370,12 +382,14 @@
                             <img src="img/business-feature-multi-device.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                     <div class="operazione">
@@ -383,12 +397,14 @@
                             <img src="img/business-feature-security.png" alt="switch">
                         </div>
                         <div>
-                           <h5>
-                            Passa di meno da uno strumento all'altro
-                           </h5> 
-                           <p>
-                            Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e Dropbox Paper direttamente da Dropbox.
-                           </p>
+                            <h5>
+                                Passa di meno da uno strumento all'altro
+                            </h5>
+                            <p>
+                                Porta a termine le attività quotidiane con un solo strumento. Crea, modifica e condividi
+                                contenuti cloud da Documenti, Fogli e Presentazioni di Google, file Microsoft Office e
+                                Dropbox Paper direttamente da Dropbox.
+                            </p>
                         </div>
                     </div>
                 </div>
@@ -408,15 +424,66 @@
     </main>
     <!-- inizio footer -->
     <footer>
-        <div class="container container-footer">
+        <div class="container-footer">
             <div class="vari">
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
-                <div></div>
+                <div>
+                    <h6>Dropbox</h6>
+                    <ul>
+                        <li>Applicazione dekstop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>Prodotti</h6>
+                    <ul>
+                        <li>Applicazione dekstop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>Azienda</h6>
+                    <ul>
+                        <li>Applicazione dekstop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>Supporto</h6>
+                    <ul>
+                        <li>Applicazione dekstop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
+                <div>
+                    <h6>Community</h6>
+                    <ul>
+                        <li>Applicazione dekstop</li>
+                        <li>Perché Dropbox</li>
+                        <li>Piani</li>
+                        <li>Sicurezza</li>
+                        <li>Funzioni</li>
+                    </ul>
+                </div>
             </div>
-            <div class="lingua"></div>
+            <div class="lingua">
+                <ul>
+                    <li><i class="fa-solid fa-earth-americas"></i></li>
+                    <li>Italiano</li>
+                    <li><i class="fa-solid fa-caret-up"></i></li>
+                </ul>
+            </div>
         </div>
     </footer>
 </body>
